crates/plotnik-tests/tests/02-parser/recovery_incomplete/type_name_invalid_token_after.txt
Q = (identifier) @name :: (
------------------ DIAGNOSTICS -------------------
error: expected a capture type after `::`
 --> query.ptk:1:27
  |
1 | Q = (identifier) @name :: (
  |                           ^
  |
help: e.g., `:: str` or `:: MyType` after a capture
